# match-engine

./: Cargo.toml  README.md
engine/: Cargo.toml
engine/benches/: batch_compare.rs  throughput.rs
engine/src/: lib.rs
engine/tests/: integration_scenarios.rs
ingestor/: Cargo.toml
ingestor/benches/: multipair_throughput.rs
ingestor/src/: lib.rs
