[package]
name = "match-engine"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Single-machine in-memory matching engine for crypto pairs"
license = "MIT OR Apache-2.0"

[lib]
name = "match_engine"
path = "src/lib.rs"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "batch_compare"
harness = false
